<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInActivity">

    <!-- Background Image -->
    <ImageView
        android:id="@+id/backArrowSignIn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgr1"
        android:contentDescription="background"
        android:alpha="0.85" />

    <!-- Conteneur principal avec fond transparent -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Logo -->

            <!-- Titre -->
            <ImageView
                android:id="@+id/logoMedway"
                android:layout_width="221dp"
                android:layout_height="191dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewSignInTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="#1E3A8A"
                app:layout_constraintTop_toBottomOf="@id/logoMedway"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="16dp"/>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmailSignIn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_your_email"
                android:textColorHint="#FFFFFF"
                app:startIconDrawable="@drawable/email"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxStrokeColor="#E21836"
                app:layout_constraintTop_toBottomOf="@id/textViewSignInTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPasswordSignIn"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_password"
                android:textColorHint="#FFFFFF"
                app:startIconDrawable="@drawable/password"
                app:endIconMode="password_toggle"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxStrokeColor="#E21836"
                app:layout_constraintTop_toBottomOf="@id/textFieldEmailSignIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Forgot Password -->
            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password"
                android:textColor="#E21836"
                android:textStyle="bold|italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textFieldPasswordSignIn" />

            <!-- Sign In Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#E21836"
                android:paddingVertical="14dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewForgotPassword" />

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/progressBarSignIn"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/buttonSignIn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/buttonSignIn" />

            <!-- Sign Up Options -->
            <LinearLayout
                android:id="@+id/layoutSignUpOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@id/buttonSignIn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/need_an_account"
                    android:textColor="@color/lightBackground"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSignUpPatientLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sign_up_as_patient"
                    android:textColor="#E21836"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/textViewSignUpProfessionalLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sign_up_as_professional"
                    android:textColor="#E21836"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
