<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignUpPatientActivity">

    <!-- Background -->
    <ImageView
        android:id="@+id/backgroundSignUpPatient"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/backgr1"
        android:contentDescription="background"
        android:alpha="0.85" />

    <!-- Scrollable form -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Logo -->
            <ImageView
                android:id="@+id/logoMedway"
                android:layout_width="221dp"
                android:layout_height="191dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"/>

            <!-- Title -->
            <TextView
                android:id="@+id/textViewSignUpPatientTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/patient_sign_up"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textColor="#1E3A8A"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/logoMedway"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <!-- Back Arrow -->
            <ImageView
                android:id="@+id/backArrowSignUpPatient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:contentDescription="@string/back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"/>

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldNamePatient"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/enter_your_name"
                android:textColorHint="#FFFFFF"
                app:startIconDrawable="@drawable/person"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxStrokeColor="#E21836"
                app:layout_constraintTop_toBottomOf="@id/textViewSignUpPatientTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNamePatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmailPatient"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_email"
                android:textColorHint="#FFFFFF"
                app:startIconDrawable="@drawable/email"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxStrokeColor="#E21836"
                app:layout_constraintTop_toBottomOf="@id/textFieldNamePatient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmailPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPasswordPatient"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_your_password"
                android:textColorHint="#FFFFFF"
                app:startIconDrawable="@drawable/password"
                app:endIconMode="password_toggle"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusTopStart="24dp"
                app:boxCornerRadiusTopEnd="24dp"
                app:boxCornerRadiusBottomStart="24dp"
                app:boxCornerRadiusBottomEnd="24dp"
                app:boxStrokeColor="#E21836"
                app:layout_constraintTop_toBottomOf="@id/textFieldEmailPatient"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPasswordPatient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign Up Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUpPatient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:backgroundTint="#E21836"
                android:paddingVertical="14dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textFieldPasswordPatient" />
            <ProgressBar
                android:id="@+id/progressBarSignUpPatient"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/buttonSignUpPatient"
                app:layout_constraintEnd_toEndOf="@id/buttonSignUpPatient"
                app:layout_constraintStart_toStartOf="@id/buttonSignUpPatient"
                app:layout_constraintTop_toTopOf="@id/buttonSignUpPatient" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
